# EnginePlayground

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
Engine/: CMakeLists.txt
Engine/Engine/: BaseGame.cpp  BaseGame.h  Clock.cpp  Clock.h
Engine/Math/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Engine/Platform/: Time.cpp  Time.h  Window.cpp  Window.h
Engine/Platform/GLFW/: TimeGLFWAdapter.cpp  TimeGLFWAdapter.h
Engine/Platform/SDL2/: TimeSDL2Adapter.cpp  TimeSDL2Adapter.h
Engine/Render/: RenderBuildExample.cpp  RenderBuildExample.h  Renderer.cpp  Renderer.h
Engine/Render/OGL/: RendererOGL.cpp  RendererOGL.h  RendererOGLAdapter.cpp  RendererOGLAdapter.h  WindowOGLAdapter.cpp  WindowOGLAdapter.h
Engine_Tests/: CMakeLists.txt
Engine_Tests/Math/: CMakeLists.txt  Vector2_test.cpp  Vector3_test.cpp
Game/: CMakeLists.txt  Game.cpp  Game.h  StartExample.cpp
